--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -242,6 +242,9 @@ body.front {
 .news-page-thumbnail-image a img {
 	border:solid 1px #242424;
 }
+.view-news-stories-by-date .view-content .views-row {
+	margin-bottom:10px;
+}
 
 
 /******************************
