--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -15,6 +15,7 @@ body {
 	line-height:16px;
 	background-color:#f9f9f9;
 	margin-top:-1px;
+	border:solid 1px;
 }
 
 td { vertical-align:top; }
@@ -28,11 +29,12 @@ td { vertical-align:top; }
 	margin-top:-5px;
 }
 .front .zone-content {
-	margin-top:30px 0 0 0;
+	margin-top:30px;
 }
 .zone-content {
 	margin-top:-18px;
 }
+
 .front .lynchburg-middle {
 	margin:0 0px 0 -10px;
 }
@@ -64,7 +66,6 @@ td { vertical-align:top; }
 	margin: 0 auto;
 	padding-top:30px;
 }
-
 
 /* ========== LOGO ========== */
 .region-branding {
