--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -77,6 +77,7 @@ body.front {
 	-ms-border-radius:0em 0em 1em 1em;
 	border-radius:0em 0em 1em 1em;
 	background-color: #FFFFFF;
+	border:solid 1px #f00;
 
 }
 .qtip a {
@@ -90,7 +91,7 @@ body.front {
 
 /*dropdown inside*/
 #mini-panel-undergraduate_megamenu .pane-content,#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu, #mini-panel-apply_megamenu, #mini-panel-visit_megamenu_block {
-	margin:20px 10px 20px 10px;
+	/*margin:20px 10px 20px 10px;*/
 	line-height:16px;
 	font-size:12;
 	/*border:pink solid 1px;*/
@@ -108,7 +109,7 @@ body.front {
 #mini-panel-undergraduate_megamenu li, #mini-panel-graduate_megamenu li, #mini-panel-student_life_megamenu li, #mini-panel-alumni_megamen li, #mini-panel-athletics_megamen li, #mini-panel-apply_megamenu li, #mini-panel-visit_megamenu li {
 	list-style:none;
 	line-height:16px;
-	padding:4px 0px;
+	/*padding:4px 0px;*/
 	/*border:green solid 1px;*/
 	}
 .pane-menu-menu-admission, .pane-menu-menu-academics, .pane-menu-menu-financial-aid {
@@ -118,12 +119,40 @@ body.front {
 	/*border:yellow solid 1px;*/
 }
 
+.menu-button {
+	-webkit-border-radius:1em;
+	-moz-border-radius:1em;
+	-o-border-radius:1em;
+	-ms-border-radius:1em;
+	border-radius:1em;
+	background-color: #ececec;
+	border:solid 1px #f00;	
+	margin-top:10px;
+}
 
 #mini-panel-undergraduate_megamenu {
 	border:solid 1px #f00;
 }
+#mini-panel-undergraduate_megamenu table{
+	border:solid 1px #f00;
+	margin:0;
+	border-radius:0;
+	-webkit-border-radius:0;
+	-moz-border-radius:0;
+	-o-border-radius:0;
+	-ms-border-radius:0;
+}
 
-
+#mini-panel-undergraduate_megamenu table tr td {
+	padding-right:20px;
+}
+#mini-panel-undergraduate_megamenu .grid-9 {
+	margin-left:0;
+	margin-right:0;
+}
+.bottom-more-row {
+	background:#bdbdbd;
+}
 
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
