--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -78,14 +78,15 @@ table {
 .image, .imageTopLeft, .imageTopRight, .imageLeft, .imageRight, .imageCenter, .field-name-field-headshot img {
 	padding:3px;
 	background:#fff;
-	-moz-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8"), -1px -1px 3px rgba(230, 230, 230, 0.8");
-	-webkit-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8"), -1px -1px 3px rgba(230, 230, 230, 0.8");
-	box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8"), -1px -1px 3px rgba(230, 230, 230, 0.8");
+	-webkit-box-shadow:2px 2px 7px 1px #A8A8A8;
+-moz-box-shadow:2px 2px 7px 1px #A8A8A8;
+-o-box-shadow:2px 2px 7px 1px #A8A8A8;
+-ms-box-shadow:2px 2px 7px 1px #A8A8A8;
+box-shadow:2px 2px 7px 1px #A8A8A8;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	position:relative;
-	behavior: url("js/PIE.htc");
 }
 .image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover, .field-name-field-headshot img {
 	background:#e0e1e0;
