--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -77,8 +77,6 @@ body.front {
 	-ms-border-radius:0em 0em 1em 1em;
 	border-radius:0em 0em 1em 1em;
 	background-color: #FFFFFF;
-	border:solid 1px #f00;
-
 }
 .qtip a {
 		text-decoration:underline;
@@ -91,67 +89,87 @@ body.front {
 
 /*dropdown inside*/
 #mini-panel-undergraduate_megamenu .pane-content,#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu, #mini-panel-apply_megamenu, #mini-panel-visit_megamenu_block {
-	/*margin:20px 10px 20px 10px;*/
-	line-height:16px;
+	margin:10px;
+	line-height:15px;
 	font-size:12;
-	/*border:pink solid 1px;*/
 }
 .menu-minipanels .pane-title, .pane-node-field-links .pane-title {
 	font-size:1.333em;
 	line-height:1em;
 	color:#900900;
-/*	border:orange solid 1px;
-*/}
+}
 #mini-panel-undergraduate_megamenu ul, #mini-panel-graduate_megamenu ul, #mini-panel-student_life_megamenu ul, #mini-panel-alumni_megamen ul, #mini-panel-athletics_megamen ul,  #mini-panel-apply_megamenu ul, #mini-panel-visit_megamenu_block ul {
 	
-	/*border:red solid 1px;*/
 }
 #mini-panel-undergraduate_megamenu li, #mini-panel-graduate_megamenu li, #mini-panel-student_life_megamenu li, #mini-panel-alumni_megamen li, #mini-panel-athletics_megamen li, #mini-panel-apply_megamenu li, #mini-panel-visit_megamenu li {
 	list-style:none;
-	line-height:16px;
-	/*padding:4px 0px;*/
-	/*border:green solid 1px;*/
+	line-height:15px;
 	}
 .pane-menu-menu-admission, .pane-menu-menu-academics, .pane-menu-menu-financial-aid {
-	/*border:red solid 1px;*/
+	
 }
 .pane-menu-menu-admission li, .pane-menu-menu-academics li, .pane-menu-menu-financial-aid li{
-	/*border:yellow solid 1px;*/
+	
 }
-
+/* ========== UNDERGRADUATE DROPDOWN ========== */
 .menu-button {
-	-webkit-border-radius:1em;
-	-moz-border-radius:1em;
-	-o-border-radius:1em;
-	-ms-border-radius:1em;
-	border-radius:1em;
-	background-color: #ececec;
-	border:solid 1px #f00;	
-	margin-top:10px;
+	-webkit-border-radius:.5em;
+	-moz-border-radius:.5em;
+	-o-border-radius:.5em;
+	-ms-border-radius:.5em;
+	border-radius:.5em;
+	background-color: #f5f5f5;
+	border:solid 1px #fff;	
+	-webkit-box-shadow:2px 2px 4px 1px #ededed;
+	-moz-box-shadow:2px 2px 4px 1px #ededed;
+	-o-box-shadow:2px 2px 4px 1px #ededed;
+	-ms-box-shadow:2px 2px 4px 1px #ededed;
+	box-shadow:2px 2px 4px 1px #ededed;
+	padding:20px 20px 10px 20px;
 }
 
 #mini-panel-undergraduate_megamenu {
-	border:solid 1px #f00;
 }
 #mini-panel-undergraduate_megamenu table{
-	border:solid 1px #f00;
-	margin:0;
-	border-radius:0;
-	-webkit-border-radius:0;
-	-moz-border-radius:0;
-	-o-border-radius:0;
-	-ms-border-radius:0;
+	background:#fff;
+	margin:0;	
 }
 
-#mini-panel-undergraduate_megamenu table tr td {
-	padding-right:20px;
+#mini-panel-undergraduate_megamenu td {
+	padding-right:30px;
 }
 #mini-panel-undergraduate_megamenu .grid-9 {
 	margin-left:0;
 	margin-right:0;
 }
-.bottom-more-row {
-	background:#bdbdbd;
+.main-menu-undergraduate-lists, .main-menu-undergraduate-lists tbody {
+	background-color:#fff;
+	border:0px;
+}
+
+.main-menu-undergraduate-lists .bottom-more-row td {
+	padding:10px 0 10px 0;
+	background-color:#f5f5f5;
+	border-top:#dddedf solid 1px;
+}
+.main-menu-undergraduate-lists .bottom-more-row a {
+	background:url(../images/icons/small/media_controls_forward_small.png) no-repeat center left;
+	padding-left:20px;
+	text-decoration:none;
+}
+.main-menu-undergraduate-lists .bottom-more-row a:hover {
+	background:url(../images/icons/small/media_controls_forward_small_hover.png) no-repeat center left;
+}
+/*undergraduate titles*/
+.main-menu-undergraduate-lists th{
+	background:#fff;
+	border:0;
+	font-size:1.4em;
+	line-height:1em;
+	color:#900900;
+}
+.main-menu-undergraduate-lists tr:hover td, .main-menu-undergraduate-lists tr.even:hover td.active, .main-menu-undergraduate-lists tr.odd:hover td.active {
+	background:#fff;
 }
 
 /**********************************************
