--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -67,16 +67,17 @@ body.front {
  * SITEWIDE TOP MENU *
 **********************************************/
 /* ========== MAIN NAV DROPDOWN ========== */
-.qtip {
+.qtip, .qtip-wrapper, .qtip-contentWrapper{
+	-webkit-border-radius:0em 0em .5em .5em;
+	-moz-border-radius:0em 0em .5em .5em;
+	-o-border-radius:0em 0em .5em .5em;
+	-ms-border-radius:0em 0em .5em .5em;
+	border-radius:0em 0em .5em .5em;
+}
+.qtip-contentWrapper{
 	border-bottom:#dddedf solid 1px;
 	border-right:#dddedf solid 1px;
 	border-left:#dddedf solid 1px;
-	-webkit-border-radius:0em 0em 1em 1em;
-	-moz-border-radius:0em 0em 1em 1em;
-	-o-border-radius:0em 0em 1em 1em;
-	-ms-border-radius:0em 0em 1em 1em;
-	border-radius:0em 0em 1em 1em;
-	background-color: #FFFFFF;
 }
 .qtip a {
 		text-decoration:underline;
@@ -89,8 +90,8 @@ body.front {
 
 /*dropdown inside*/
 #mini-panel-undergraduate_megamenu .pane-content,#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu, #mini-panel-apply_megamenu, #mini-panel-visit_megamenu_block {
-	margin:10px;
-	line-height:15px;
+	/*margin:10px;
+	*/line-height:15px;
 	font-size:12;
 }
 .menu-minipanels .pane-title, .pane-node-field-links .pane-title {
@@ -118,40 +119,54 @@ body.front {
 	-o-border-radius:.5em;
 	-ms-border-radius:.5em;
 	border-radius:.5em;
-	background-color: #f5f5f5;
-	border:solid 1px #fff;	
-	-webkit-box-shadow:2px 2px 4px 1px #ededed;
-	-moz-box-shadow:2px 2px 4px 1px #ededed;
-	-o-box-shadow:2px 2px 4px 1px #ededed;
-	-ms-box-shadow:2px 2px 4px 1px #ededed;
-	box-shadow:2px 2px 4px 1px #ededed;
 	padding:20px 20px 10px 20px;
+	margin:20px;
+	background:#f0f0f0; /* Old browsers */
 }
-
-#mini-panel-undergraduate_megamenu {
+#mini-panel-undergraduate_megamenu, #mini-panel-student_life_megamenu {
+	border-top:none;
 }
-#mini-panel-undergraduate_megamenu table{
+#mini-panel-undergraduate_megamenu table,  #mini-panel-student_life_megamenu {
 	background:#fff;
-	margin:0;	
+	margin:0;
+	border:none;
+	border-right:#dddedf solid 1px;
 }
-
-#mini-panel-undergraduate_megamenu td {
-	padding-right:30px;
+#mini-panel-undergraduate_megamenu th,  #mini-panel-student_life_megamenu th {
+	padding:20px 20px 0px 20px;
+	/*border-top:none;*/
 }
-#mini-panel-undergraduate_megamenu .grid-9 {
+#mini-panel-undergraduate_megamenu td,  #mini-panel-student_life_megamenu td {
+	padding:10px 20px 10px 20px;
+}
+#mini-panel-undergraduate_megamenu .grid-9,  #mini-panel-student_life_megamenu .grid-9 {
 	margin-left:0;
 	margin-right:0;
 }
-.main-menu-undergraduate-lists, .main-menu-undergraduate-lists tbody {
+.main-menu-undergraduate-lists, .main-menu-undergraduate-lists tbody, {
 	background-color:#fff;
 	border:0px;
 }
-
-.main-menu-undergraduate-lists .bottom-more-row td {
+.main-menu-undergraduate-lists .bottom-more-row{
 	padding:10px 0 10px 0;
-	background-color:#f5f5f5;
-	border-top:#dddedf solid 1px;
+	background: rgb(247,247,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,247,247,1) 0%, rgba(230,230,230,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,247,247,1)), color-stop(100%,rgba(230,230,230,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
 }
+.main-menu-undergraduate-lists .bottom-more-row td {
+	border-top:#dddedf solid 1px;
+	-webkit-border-radius:0em 0em 0em .5em ;
+	-moz-border-radius:0em 0em 0em .5em;
+	-o-border-radius:0em 0em 0em .5em;
+	-ms-border-radius:0em 0em 0em .5em;
+	border-radius:0em 0em 0em .5em;
+}
+
 .main-menu-undergraduate-lists .bottom-more-row a {
 	background:url(../images/icons/small/media_controls_forward_small.png) no-repeat center left;
 	padding-left:20px;
@@ -169,10 +184,22 @@ body.front {
 	color:#900900;
 }
 .main-menu-undergraduate-lists tr:hover td, .main-menu-undergraduate-lists tr.even:hover td.active, .main-menu-undergraduate-lists tr.odd:hover td.active {
-	background:#fff;
+	background:#fff;		
 }
 .main-menu-undergraduate-lists tr.bottom-more-row:hover td, .main-menu-undergraduate-lists tr.bottom-more-row:hover td.active {
-	background:#f5f5f5;
+	background: rgb(247,247,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,247,247,1) 0%, rgba(230,230,230,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,247,247,1)), color-stop(100%,rgba(230,230,230,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(230,230,230,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
+	-webkit-border-radius:0em 0em 0em .5em ;
+	-moz-border-radius:0em 0em 0em .5em;
+	-o-border-radius:0em 0em 0em .5em;
+	-ms-border-radius:0em 0em 0em .5em;
+	border-radius:0em 0em 0em .5em;
 }
 
 /**********************************************
