--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -204,6 +204,8 @@ body.front {
 
 .megamenu-grid3-width { max-width:150px; }
 
+#athletics-stories-feed {max-width: 260px;}
+
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
 **********************************************/
