--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -204,7 +204,10 @@ body.front {
 
 .megamenu-grid3-width { max-width:150px; }
 
+#graduate-programs-certificates { max-width:400px; }
+
 #athletics-stories-feed, #athletics-events-feed, .megamenu-athletics-pane { max-width: 250px; }
+
 
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
