megamenu-grid4-width

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -199,6 +199,7 @@ body.front {
 }
 
 .megamenu-grid3-width { max-width:150px; }
+.megamenu-grid4-width { max-width:225px; }
 
 #graduate-programs-certificates { max-width:400px; }
 
